objects/APTS_Cart_Line_Group__c.object
<CustomObject>
    <fields>
        <fullName>APTS_Group_Name__c</fullName>
        <label>Group Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote__c</fullName>
        <label>Quote</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Cart Line Group</relationshipLabel>
        <relationshipName>Cart_Line_Group</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Total_EUR__c</fullName>
        <formula>IF( 
APTS_Sub_Total__c&gt;= 1000000, 
TEXT(FLOOR(APTS_Sub_Total__c/ 1000000)) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
IF( 
APTS_Sub_Total__c&gt;= 1000, 
RIGHT(TEXT(FLOOR(APTS_Sub_Total__c / 1000)), 3) &amp; &quot;.&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(APTS_Sub_Total__c)), 3) &amp; &quot;,&quot; &amp; 
IF( 
MOD(APTS_Sub_Total__c, 1) * 100 &lt; 10, 
&quot;0&quot; &amp; TEXT(ROUND(MOD(APTS_Sub_Total__c, 1), 2) * 100), 
TEXT(MIN(ROUND(MOD(APTS_Sub_Total__c, 1), 2) * 100, 99)) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub Total EUR</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sub_Total__c</fullName>
        <label>Sub Total</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Cart Line Group</label>
    <nameField>
        <displayFormat>CLG-{0000000000}</displayFormat>
        <label>Cart Line Group Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Cart Line Group</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>